public class MasterMindApp {
    public static void main(String[] args) {
        System.out.println("Hello world!");
    }
}
