package Model;

public enum Color {
}
