package Model;

public class Combination {
}
