package Model;

import java.util.ArrayList;

public class Game {
    private ArrayList<Round> roundList;

    public Game(){
        this.roundList = new ArrayList<Round>();
    }
}
