package Model;

public class Hint {
    private Pawn pawn;
    public Hint(Pawn pawn){
        this.pawn = pawn;
    }
}
