package Model;

public class Pawn {
}
