package Model;

public class Round {
    private Combination secretCombination;

    public Round(){
        
    }
}
