package View;

import Model.Observer;

public class EndGameWIndow implements Observer {
}
