package View;

import Model.Observer;

public class GameWindow implements Observer {
}
