package View;

import Model.Observer;

public class StartWindow implements Observer {
}
